# multi-robot-playground

./: .gitignore  LICENSE  build_image.sh  docker-compose.yml  run_image.sh  system_overview.drawio
deployment/: Dockerfile.amd64
docker/: Dockerfile
mrp_msg/: package.xml  (+1 more)
multi_robot_centralised_server/mrp_global_task_planner/mrp_hungarian/: CMakeLists.txt  package.xml  plugins.xml
multi_robot_centralised_server/mrp_global_task_planner/mrp_hungarian/hungarian_algorithm/: hungarian.cpp
multi_robot_centralised_server/mrp_global_task_planner/mrp_hungarian/include/mrp_hungarian/: hungarian_task_allocator.hpp  mrp_hungarian.hpp  visibility_control.h
multi_robot_centralised_server/mrp_global_task_planner/mrp_hungarian/src/: main.cpp  mrp_hungarian.cpp
multi_robot_component_testing/: CMakeLists.txt  package.xml
multi_robot_component_testing/exec/: lifecycle_node.cpp  minimal_action_client.cpp  minimal_action_server.cpp  minimal_service_client.cpp  minimal_service_server.cpp
multi_robot_component_testing/include/multi_robot_component_testing/: lifecycle_node.hpp  minimal_action_client.hpp  minimal_action_server.hpp  minimal_service_client.hpp  minimal_service_server.hpp
multi_robot_component_testing/src/: lifecycle_node.cpp  main.cpp  minimal_action_client.cpp  minimal_action_server.cpp  minimal_service_client.cpp  minimal_service_server.cpp
multi_robot_local_server/mrp_behavior/mrp_behavior_tree/: CMakeLists.txt  package.xml
multi_robot_local_server/mrp_behavior/mrp_behavior_tree/include/mrp_behavior_tree/: behavior_tree_engine.hpp  bt_action_client_node.hpp
multi_robot_local_server/mrp_behavior/mrp_behavior_tree/plugins/action/: follow_path_action.cpp  move_to_target_action.cpp
multi_robot_local_server/mrp_behavior/mrp_behavior_tree/plugins/control/: pipeline_sequence.cpp  recovery_node.cpp  round_robin_node.cpp
multi_robot_local_server/mrp_behavior/mrp_behavior_tree/src/: behavior_tree_engine.cpp
multi_robot_local_server/mrp_behavior/mrp_behavior_tree/test/: test_action_server.hpp
multi_robot_local_server/mrp_behavior/mrp_behavior_tree/test/plugins/action/: CMakeLists.txt  test_follow_path.cpp
multi_robot_local_server/mrp_local_bringup/: package.xml  setup.cfg  setup.py
multi_robot_local_server/mrp_local_bringup/config/: settings.yml
multi_robot_local_server/mrp_local_bringup/launch/: mrp_local_bringup.launch.py
multi_robot_local_server/mrp_local_bringup/mrp_local_bringup/: activate_motion_planners.py  activate_servers.py  lifecycle_manager_client.py
multi_robot_local_server/mrp_motion_planner_server/mrp_nmpc_orca/: CMakeLists.txt  package.xml  plugins.xml
multi_robot_local_server/mrp_motion_planner_server/mrp_nmpc_orca/include/cgmres_solver/: optimal_control_problem.hpp
multi_robot_local_server/mrp_motion_planner_server/mrp_nmpc_orca/include/mrp_nmpc_orca/: course_manager.hpp  frenet_serret_converter.hpp  frenet_state_filter.hpp  mpc.hpp  mpc_simulator.hpp  nmpc_formulation.hpp  nmpc_path_tracker.hpp  solver.hpp  state_space_order.hpp
multi_robot_local_server/mrp_motion_planner_server/mrp_nmpc_orca/src/: main.cpp  mpc.cpp  solver.cpp
multi_robot_local_server/mrp_motion_planner_server/mrp_nmpc_orca/src/nmpc/: course_manager.cpp  frenet_serret_converter.cpp  frenet_state_filter.cpp  mpc_simulator.cpp  nmpc_formulation.cpp  nmpc_path_tracker.cpp
multi_robot_local_server/mrp_motion_planner_server/mrp_pure_pursuit/: CMakeLists.txt  package.xml  plugins.xml
multi_robot_local_server/mrp_motion_planner_server/mrp_pure_pursuit/include/mrp_pure_pursuit/: geometry.hpp  mpc.hpp  orca.hpp  pure_pursuit_controller.hpp  solver.hpp
multi_robot_local_server/mrp_motion_planner_server/mrp_pure_pursuit/src/: orca.cpp  pure_pursuit_controller.cpp  solver.cpp
multi_robot_local_server/mrp_motion_planner_server/simple_controller/spotturn_controller/: CMakeLists.txt
multi_robot_local_server/mrp_motion_planner_server/simple_controller/spotturn_controller/include/spotturn_controller/: visibility_control.h
multi_robot_local_server/mrp_motion_planner_server/simple_controller/spotturn_controller/src/: spotturn_controller.cpp
multi_robot_local_server/mrp_motion_planner_server/simple_controller_server/controller_server/: CMakeLists.txt  package.xml
multi_robot_local_server/mrp_motion_planner_server/simple_controller_server/controller_server/config/: server_config.yaml  spotturn_config.yaml
multi_robot_local_server/mrp_motion_planner_server/simple_controller_server/controller_server/include/controller_server/: controller_server.hpp
multi_robot_local_server/mrp_motion_planner_server/simple_controller_server/controller_server/launch/: controller_server.launch.py
multi_robot_local_server/mrp_motion_planner_server/simple_controller_server/controller_server/scripts/: simple_waypoint_request.py
multi_robot_local_server/mrp_motion_planner_server/simple_controller_server/controller_server/src/: controller_server.cpp  main.cpp
multi_robot_playground_common/mrp_common/: CMakeLists.txt  package.xml
multi_robot_playground_common/mrp_common/include/mrp_common/: action_client.hpp  action_server.hpp  lifecycle_node.hpp  parameter_client.hpp  parameter_interface.hpp  service_client.hpp  service_server.hpp  utils.hpp
multi_robot_playground_common/mrp_common/src/: lifecycle_node.cpp  parameter_client.cpp  utils.cpp
multi_robot_playground_common/mrp_common/test/: CMakeLists.txt  test_action_client.cpp  test_action_server.cpp
multi_robot_playground_common/mrp_lifecycle_manager/: CMakeLists.txt  package.xml
multi_robot_playground_common/mrp_lifecycle_manager/config/: settings.yml
multi_robot_playground_common/mrp_lifecycle_manager/include/mrp_lifecycle_manager/: lifecycle_manager_client.hpp  lifecyle_manager.hpp
multi_robot_playground_common/mrp_lifecycle_manager/launch/: lifecycle_manager.launch.py
multi_robot_playground_common/mrp_lifecycle_manager/scripts/: lifecycle_client.py
multi_robot_playground_common/mrp_lifecycle_manager/src/: lifecycle_manager.cpp  lifecycle_manager_client.cpp  lifecyle_manager.cpp  lifecyle_manager_client.cpp  main.cpp
(+217 files in other folders)
