<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mrp_local_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="khoa@todo.todo">khoa</maintainer>
  <license>TODO: License declaration</license>

  <depend>mrp_lifecycle_manager</depend>
  <depend>mrp_motion_planner_server</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
