<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>controller_server</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="khoanguyendacdang2198@gmail.com">khoa</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>mrp_common</depend>
  <depend>mrp_local_server_core</depend>
  <depend>pluginlib</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_mags</depend>
  <depend>spotturn_controller</depend>
  <depend>mrp_common_msgs</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>mrp_motion_planner_msgs</depend>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
